--- a/Home.css
+++ b/Home.css
@@ -631,8 +631,8 @@
     width: 340px;
   }
 } .u-section-6 {
-  background-image: linear-gradient(#292a33, #3a6549);
-  min-height: 1479px;
+  background-image: linear-gradient(#3a6549, #292a33);
+  min-height: 1698px;
 }
 
 .u-section-6 .u-image-1 {
@@ -642,19 +642,19 @@
 }
 
 .u-section-6 .u-text-1 {
-  font-size: 4.5rem;
-  margin: -269px calc(((100% - 1140px) / 2) + -153px) 0 calc(((100% - 1140px) / 2) + 319px);
+  font-size: 4.0625rem;
+  margin: -278px calc(((100% - 1140px) / 2) + 87px) 0 calc(((100% - 1140px) / 2) + 328px);
 }
 
 .u-section-6 .u-text-2 {
   font-size: 1.5rem;
-  margin: 1px calc(((100% - 1140px) / 2) + 135px) 0 calc(((100% - 1140px) / 2) + 328px);
+  margin: 10px calc(((100% - 940px) / 2) + 35px) 0 calc(((100% - 940px) / 2) + 228px);
 }
 
 .u-section-6 .u-list-1 {
   grid-template-rows: auto;
-  width: 1140px;
-  margin: 57px auto 60px;
+  width: 940px;
+  margin: 57px auto 0;
 }
 
 .u-section-6 .u-repeater-1 {
@@ -668,12 +668,13 @@
 }
 
 .u-section-6 .u-container-layout-1 {
-  padding: 0 0 30px;
+  padding: 0;
 }
 
 .u-section-6 .u-group-1 {
   min-height: 128px;
-  margin: 0 auto 0 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-6 .u-container-layout-2 {
@@ -684,14 +685,14 @@
   font-weight: 700;
   letter-spacing: 2px;
   text-transform: uppercase;
-  font-size: 1.75rem;
-  margin: 0 25px;
+  font-size: 1.5rem;
+  margin: 0;
 }
 
 .u-section-6 .u-image-2 {
-  width: 339px;
   height: 275px;
-  margin: 14px auto 0;
+  margin-top: 14px;
+  margin-bottom: 0;
 }
 
 .u-section-6 .u-group-2 {
@@ -707,12 +708,12 @@
 .u-section-6 .u-text-4 {
   font-size: 1.125rem;
   font-weight: 400;
-  margin: 43px 204px 0 0;
+  margin: 43px 4px 0 0;
 }
 
 .u-section-6 .u-text-5 {
   font-size: 1rem;
-  margin: 14px 100px 0 25px;
+  margin: 14px 18px 0 17px;
 }
 
 .u-section-6 .u-btn-1 {
@@ -730,13 +731,14 @@
 }
 
 .u-section-6 .u-container-layout-4 {
-  padding: 0 0 30px;
+  padding: 0;
 }
 
 .u-section-6 .u-group-3 {
-  min-height: 128px;
   background-size: auto;
-  margin: 0 auto 0 0;
+  min-height: 128px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-6 .u-container-layout-5 {
@@ -747,19 +749,19 @@
   font-weight: 700;
   letter-spacing: 2px;
   text-transform: uppercase;
-  font-size: 1.75rem;
-  margin: 0 25px;
+  font-size: 1.5rem;
+  margin: 0;
 }
 
 .u-section-6 .u-image-3 {
-  width: 339px;
   height: 275px;
-  margin: 14px auto 0;
+  margin-top: 14px;
+  margin-bottom: 0;
 }
 
 .u-section-6 .u-group-4 {
-  min-height: 341px;
   background-size: auto;
+  min-height: 341px;
   margin-top: -63px;
   margin-bottom: 0;
 }
@@ -771,12 +773,12 @@
 .u-section-6 .u-text-7 {
   font-size: 1.125rem;
   font-weight: 400;
-  margin: 43px 204px 0 0;
+  margin: 43px 4px 0 0;
 }
 
 .u-section-6 .u-text-8 {
   font-size: 1rem;
-  margin: 14px 100px 0 25px;
+  margin: 14px 18px 0 17px;
 }
 
 .u-section-6 .u-btn-2 {
@@ -794,13 +796,14 @@
 }
 
 .u-section-6 .u-container-layout-7 {
-  padding: 0 0 30px;
+  padding: 0;
 }
 
 .u-section-6 .u-group-5 {
-  min-height: 128px;
   background-size: auto;
-  margin: 0 auto 0 0;
+  min-height: 128px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-6 .u-container-layout-8 {
@@ -811,19 +814,19 @@
   font-weight: 700;
   letter-spacing: 2px;
   text-transform: uppercase;
-  font-size: 1.75rem;
-  margin: 0 25px;
+  font-size: 1.5rem;
+  margin: 0;
 }
 
 .u-section-6 .u-image-4 {
-  width: 339px;
   height: 275px;
-  margin: 14px auto 0;
+  margin-top: 14px;
+  margin-bottom: 0;
 }
 
 .u-section-6 .u-group-6 {
-  min-height: 341px;
   background-size: auto;
+  min-height: 341px;
   margin-top: -63px;
   margin-bottom: 0;
 }
@@ -835,12 +838,12 @@
 .u-section-6 .u-text-10 {
   font-size: 1.125rem;
   font-weight: 400;
-  margin: 43px 204px 0 0;
+  margin: 43px 4px 0 0;
 }
 
 .u-section-6 .u-text-11 {
   font-size: 1rem;
-  margin: 14px 100px 0 25px;
+  margin: 14px 18px 0 17px;
 }
 
 .u-section-6 .u-btn-3 {
@@ -853,54 +856,68 @@
   margin: 40px auto 0;
 }
 
+.u-section-6 .u-layout-wrap-1 {
+  width: 940px;
+  margin: 43px auto 60px;
+}
+
+.u-section-6 .u-layout-cell-1 {
+  min-height: 425px;
+}
+
+.u-section-6 .u-container-layout-10 {
+  padding: 30px 0;
+}
+
+.u-section-6 .u-text-12 {
+  font-size: 8.125rem;
+  font-weight: 100;
+  margin: 0 auto;
+}
+
+.u-section-6 .u-text-13 {
+  font-weight: 700;
+  font-size: 1.875rem;
+  margin: 20px 0 0;
+}
+
+.u-section-6 .u-layout-cell-2 {
+  min-height: 320px;
+}
+
+.u-section-6 .u-container-layout-11 {
+  padding: 30px;
+}
+
+.u-section-6 .u-text-14 {
+  margin-top: 0;
+  line-height: 2;
+  margin-bottom: 0;
+}
+
+.u-section-6 .u-btn-4 {
+  background-image: none;
+  border-style: solid;
+  letter-spacing: 0;
+}
+
 @media (max-width: 1199px) {
    .u-section-6 {
-    min-height: 1260px;
+    min-height: 1686px;
   }
 
   .u-section-6 .u-text-1 {
-    font-size: 4.0625rem;
     margin-right: calc(((100% - 940px) / 2));
-    margin-left: calc(((100% - 940px) / 2));
+    margin-left: calc(((100% - 940px) / 2) + 215px);
   }
 
   .u-section-6 .u-text-2 {
-    margin-right: calc(((100% - 940px) / 2) + 35px);
-    margin-left: calc(((100% - 940px) / 2) + 228px);
-  }
-
-  .u-section-6 .u-list-1 {
-    width: 940px;
-  }
-
-  .u-section-6 .u-container-layout-1 {
-    padding-bottom: 0;
-  }
-
-  .u-section-6 .u-group-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-6 .u-text-3 {
-    font-size: 1.5rem;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-6 .u-image-2 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-6 .u-text-4 {
-    margin-right: 4px;
+    margin-right: calc(((100% - 940px) / 2));
+    margin-left: calc(((100% - 940px) / 2) + 63px);
   }
 
   .u-section-6 .u-text-5 {
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
   }
 
   .u-section-6 .u-btn-1 {
@@ -911,34 +928,8 @@
     background-size: auto;
   }
 
-  .u-section-6 .u-container-layout-4 {
-    padding-bottom: 0;
-  }
-
-  .u-section-6 .u-group-3 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-6 .u-text-6 {
-    font-size: 1.5rem;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-6 .u-image-3 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-6 .u-text-7 {
-    margin-right: 4px;
-  }
-
   .u-section-6 .u-text-8 {
-    width: 223px;
-    margin-right: -25px;
+    width: auto;
   }
 
   .u-section-6 .u-btn-2 {
@@ -949,33 +940,8 @@
     background-size: auto;
   }
 
-  .u-section-6 .u-container-layout-7 {
-    padding-bottom: 0;
-  }
-
-  .u-section-6 .u-group-5 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-6 .u-text-9 {
-    font-size: 1.5rem;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-6 .u-image-4 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-6 .u-text-10 {
-    margin-right: 4px;
-  }
-
   .u-section-6 .u-text-11 {
-    margin-right: -25px;
+    width: auto;
   }
 
   .u-section-6 .u-btn-3 {
@@ -985,27 +951,26 @@
 
 @media (max-width: 991px) {
    .u-section-6 {
-    min-height: 1901px;
+    min-height: 2441px;
   }
 
   .u-section-6 .u-text-1 {
     width: auto;
-    margin-top: 0;
+    margin-top: 43px;
     margin-left: 50px;
     margin-right: 50px;
   }
 
   .u-section-6 .u-text-2 {
     width: auto;
-    margin-top: 25px;
-    margin-left: 72px;
-    margin-right: 72px;
+    margin-top: 43px;
+    margin-left: 50px;
+    margin-right: 50px;
   }
 
   .u-section-6 .u-list-1 {
     width: 720px;
-    margin-top: 83px;
-    margin-bottom: 0;
+    margin-top: 43px;
   }
 
   .u-section-6 .u-repeater-1 {
@@ -1015,47 +980,65 @@
 
   .u-section-6 .u-image-2 {
     height: 316px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-6 .u-text-4 {
     margin-right: 0;
   }
 
+  .u-section-6 .u-text-5 {
+    margin-right: -25px;
+    margin-left: 25px;
+  }
+
   .u-section-6 .u-image-3 {
     height: 316px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-6 .u-text-7 {
     margin-right: 0;
   }
 
+  .u-section-6 .u-text-8 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
   .u-section-6 .u-image-4 {
     height: 316px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-6 .u-text-10 {
     margin-right: 0;
   }
+
+  .u-section-6 .u-text-11 {
+    margin-right: -25px;
+    margin-left: 25px;
+  }
+
+  .u-section-6 .u-layout-wrap-1 {
+    width: 720px;
+    margin-top: 63px;
+    margin-bottom: 20px;
+  }
+
+  .u-section-6 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-6 .u-layout-cell-2 {
+    min-height: 100px;
+  }
 }
 
 @media (max-width: 767px) {
-  .u-section-6 .u-text-1 {
-    margin-right: calc(((100% - 540px) / 2));
-    margin-left: calc(((100% - 540px) / 2));
+   .u-section-6 {
+    min-height: 4122px;
   }
 
-  .u-section-6 .u-text-2 {
-    margin-right: calc(((100% - 540px) / 2));
-    margin-left: calc(((100% - 540px) / 2));
+  .u-section-6 .u-text-1 {
+    font-size: 3rem;
   }
 
   .u-section-6 .u-list-1 {
@@ -1064,6 +1047,7 @@
 
   .u-section-6 .u-repeater-1 {
     grid-template-columns: 100%;
+    min-height: 2829px;
   }
 
   .u-section-6 .u-container-layout-2 {
@@ -1073,20 +1057,28 @@
 
   .u-section-6 .u-image-2 {
     height: 474px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-top: 38px;
   }
 
   .u-section-6 .u-group-2 {
-    min-height: 358px;
+    min-height: 382px;
+    margin-top: -96px;
+    margin-bottom: -22px;
+  }
+
+  .u-section-6 .u-container-layout-3 {
+    padding-bottom: 24px;
   }
 
   .u-section-6 .u-text-5 {
     font-size: 1.25rem;
-    width: auto;
+    margin-top: 43px;
     margin-right: 53px;
     margin-left: 14px;
+  }
+
+  .u-section-6 .u-btn-1 {
+    margin-top: 11px;
   }
 
   .u-section-6 .u-container-layout-5 {
@@ -1096,16 +1088,28 @@
 
   .u-section-6 .u-image-3 {
     height: 474px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-top: 38px;
+  }
+
+  .u-section-6 .u-group-4 {
+    min-height: 382px;
+    margin-top: -96px;
+    margin-bottom: -22px;
+  }
+
+  .u-section-6 .u-container-layout-6 {
+    padding-bottom: 24px;
   }
 
   .u-section-6 .u-text-8 {
-    width: auto;
     font-size: 1.25rem;
+    margin-top: 43px;
     margin-right: 53px;
     margin-left: 14px;
+  }
+
+  .u-section-6 .u-btn-2 {
+    margin-top: 11px;
   }
 
   .u-section-6 .u-container-layout-8 {
@@ -1115,22 +1119,51 @@
 
   .u-section-6 .u-image-4 {
     height: 474px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-top: 38px;
+  }
+
+  .u-section-6 .u-group-6 {
+    min-height: 382px;
+    margin-top: -96px;
+    margin-bottom: -22px;
+  }
+
+  .u-section-6 .u-container-layout-9 {
+    padding-bottom: 24px;
   }
 
   .u-section-6 .u-text-11 {
     font-size: 1.25rem;
-    width: auto;
+    margin-top: 43px;
     margin-right: 53px;
     margin-left: 14px;
+  }
+
+  .u-section-6 .u-btn-3 {
+    margin-top: 11px;
+  }
+
+  .u-section-6 .u-layout-wrap-1 {
+    width: 540px;
+  }
+
+  .u-section-6 .u-layout-cell-2 {
+    min-height: 245px;
+  }
+
+  .u-section-6 .u-container-layout-11 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-6 .u-btn-4 {
+    margin: 20px auto 0;
   }
 }
 
 @media (max-width: 575px) {
    .u-section-6 {
-    min-height: 2860px;
+    min-height: 3643px;
   }
 
   .u-section-6 .u-image-1 {
@@ -1139,66 +1172,122 @@
   }
 
   .u-section-6 .u-text-1 {
-    font-size: 3rem;
-    margin-right: calc(((100% - 340px) / 2));
-    margin-left: calc(((100% - 340px) / 2));
+    margin-right: 0;
+    margin-left: 0;
   }
 
   .u-section-6 .u-text-2 {
-    margin-right: calc(((100% - 340px) / 2));
-    margin-left: calc(((100% - 340px) / 2));
+    margin-right: 0;
+    margin-left: 0;
   }
 
   .u-section-6 .u-list-1 {
     width: 340px;
-    margin-bottom: 60px;
   }
 
   .u-section-6 .u-repeater-1 {
-    min-height: 1962px;
+    min-height: 2266px;
+  }
+
+  .u-section-6 .u-group-1 {
+    margin-top: -11px;
   }
 
   .u-section-6 .u-image-2 {
     height: 298px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-top: 25px;
+  }
+
+  .u-section-6 .u-group-2 {
+    margin-top: -63px;
+  }
+
+  .u-section-6 .u-container-layout-3 {
+    padding-top: 24px;
   }
 
   .u-section-6 .u-text-5 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 22px;
+    margin-right: 22px;
+  }
+
+  .u-section-6 .u-btn-1 {
+    margin-left: 79px;
+  }
+
+  .u-section-6 .u-group-3 {
+    margin-top: -11px;
   }
 
   .u-section-6 .u-image-3 {
     height: 298px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-top: 25px;
+  }
+
+  .u-section-6 .u-group-4 {
+    margin-top: -63px;
+  }
+
+  .u-section-6 .u-container-layout-6 {
+    padding-top: 24px;
   }
 
   .u-section-6 .u-text-8 {
-    margin-left: 25px;
-    margin-right: -25px;
+    margin-left: 22px;
+    margin-right: 22px;
   }
 
   .u-section-6 .u-btn-2 {
     margin-left: 79px;
   }
 
+  .u-section-6 .u-group-5 {
+    margin-top: -11px;
+  }
+
   .u-section-6 .u-image-4 {
     height: 298px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-top: 25px;
+  }
+
+  .u-section-6 .u-group-6 {
+    min-height: 358px;
+    margin-top: -63px;
+  }
+
+  .u-section-6 .u-container-layout-9 {
+    padding-top: 24px;
   }
 
   .u-section-6 .u-text-11 {
-    margin-left: 25px;
-    margin-right: -25px;
+    margin-left: 22px;
+    margin-right: 22px;
   }
 
   .u-section-6 .u-btn-3 {
     margin-left: 79px;
+  }
+
+  .u-section-6 .u-layout-wrap-1 {
+    width: 340px;
+    margin-bottom: 43px;
+  }
+
+  .u-section-6 .u-layout-cell-1 {
+    min-height: 489px;
+  }
+
+  .u-section-6 .u-container-layout-10 {
+    padding-bottom: 41px;
+  }
+
+  .u-section-6 .u-text-12 {
+    width: auto;
+    margin-right: -44px;
+    margin-left: 0;
+  }
+
+  .u-section-6 .u-layout-cell-2 {
+    min-height: 100px;
   }
 }
