--- a/nicepage.css
+++ b/nicepage.css
@@ -35403,13 +35403,13 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 .u-footer .u-sheet-1 {
-  min-height: 609px;
+  min-height: 610px;
 }
 
 .u-footer .u-image-1 {
-  width: 200px;
-  height: 130px;
-  margin: 20px auto 0;
+  width: 174px;
+  height: 113px;
+  margin: 20px auto 0 88px;
 }
 
 .u-footer .u-logo-image-1 {
@@ -35417,38 +35417,12 @@ a.u-link.u-text-hover-grey-90:hover {
   height: 100%;
 }
 
-.u-footer .u-line-1 {
-  transform-origin: left center 0px;
-  height: 1px;
-  width: 1140px;
-  margin: 30px auto 0 0;
-}
-
-.u-footer .u-layout-wrap-1 {
-  margin-top: 30px;
-  margin-bottom: 60px;
-}
-
-.u-footer .u-layout-cell-1 {
-  min-height: 278px;
-}
-
-.u-footer .u-container-layout-1 {
-  padding: 20px;
-}
-
-.u-footer .u-position-1 {
-  min-height: 146px;
-  width: 223px;
-  margin: 0;
-}
-
 .u-footer .u-social-icons-1 {
   height: 62px;
   min-height: 16px;
-  width: 204px;
-  min-width: 68px;
-  margin: -99px auto 0 0;
+  width: 350px;
+  min-width: 120px;
+  margin: -62px 249px 0 auto;
 }
 
 .u-footer .u-icon-1 {
@@ -35463,17 +35437,55 @@ a.u-link.u-text-hover-grey-90:hover {
   height: 100%;
 }
 
+.u-footer .u-icon-4 {
+  height: 100%;
+}
+
+.u-footer .u-icon-5 {
+  height: 100%;
+  color: rgb(255, 255, 255) !important;
+}
+
+.u-footer .u-line-1 {
+  transform-origin: left center 0px;
+  height: 1px;
+  width: 1140px;
+  margin: 47px auto 0 0;
+}
+
+.u-footer .u-layout-wrap-1 {
+  margin-top: 30px;
+  margin-bottom: 60px;
+}
+
+.u-footer .u-layout-cell-1 {
+  min-height: 324px;
+}
+
+.u-footer .u-container-layout-1 {
+  padding: 20px;
+}
+
 .u-footer .u-layout-cell-2 {
-  min-height: 227px;
+  min-height: 324px;
 }
 
 .u-footer .u-container-layout-2 {
-  padding: 20px;
+  padding: 20px 9px;
+}
+
+.u-footer .u-position-1 {
+  min-height: 120px;
+  margin: 0 0 0 23px;
+}
+
+.u-footer .u-text-2 {
+  font-size: 1.25rem;
 }
 
 .u-footer .u-btn-1 {
   background-image: none;
-  font-size: 1rem;
+  padding: 0;
 }
 
 .u-footer .u-layout-cell-3 {
@@ -35484,12 +35496,12 @@ a.u-link.u-text-hover-grey-90:hover {
   padding: 20px;
 }
 
-.u-footer .u-position-3 {
+.u-footer .u-position-2 {
   width: 223px;
   margin: 0;
 }
 
-.u-footer .u-text-6 {
+.u-footer .u-text-4 {
   font-size: 1.25rem;
 }
 
@@ -35504,6 +35516,13 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-btn-4 {
+  margin-top: 0;
+  border-style: none;
+  font-weight: normal;
+  padding: 0;
+}
+
+.u-footer .u-btn-5 {
   background-image: none;
   padding: 0;
 }
@@ -35516,41 +35535,26 @@ a.u-link.u-text-hover-grey-90:hover {
   padding: 20px;
 }
 
-.u-footer .u-text-8 {
+.u-footer .u-text-6 {
   font-size: 1.25rem;
-}
-
-.u-footer .u-btn-5 {
-  background-image: none;
-  padding: 0;
 }
 
 .u-footer .u-btn-6 {
   background-image: none;
   padding: 0;
 }
+
+.u-footer .u-btn-7 {
+  background-image: none;
+  padding: 0;
+}
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
-    min-height: 273px;
+    min-height: 561px;
   }
 
-  .u-footer .u-line-1 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-footer .u-layout-cell-1 {
-    min-height: 229px;
-  }
-
-  .u-footer .u-position-1 {
-    height: auto;
-    width: 173px;
-  }
-
-  .u-footer .u-social-icons-1 {
-    width: 206px;
+  .u-footer .u-image-1 {
+    width: 174px;
   }
 
   .u-footer .u-icon-1 {
@@ -35565,15 +35569,39 @@ a.u-link.u-text-hover-grey-90:hover {
     color: rgb(0, 0, 0) !important;
   }
 
+  .u-footer .u-icon-4 {
+    color: rgb(255, 255, 255) !important;
+  }
+
+  .u-footer .u-line-1 {
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-footer .u-layout-cell-1 {
+    min-height: 267px;
+  }
+
   .u-footer .u-layout-cell-2 {
     min-height: 91px;
+  }
+
+  .u-footer .u-position-1 {
+    height: auto;
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .u-footer .u-btn-1 {
+    margin-top: 34px;
   }
 
   .u-footer .u-layout-cell-3 {
     min-height: 91px;
   }
 
-  .u-footer .u-position-3 {
+  .u-footer .u-position-2 {
     width: 173px;
   }
 
@@ -35582,22 +35610,46 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 @media (max-width: 991px) {
-  .u-footer .u-layout-cell-1 {
-    min-height: 201px;
+  .u-footer .u-sheet-1 {
+    min-height: 814px;
   }
 
-  .u-footer .u-btn-1 {
-    font-size: 1.25rem;
-    padding: 0;
+  .u-footer .u-social-icons-1 {
+    margin-top: -75px;
+    margin-right: 133px;
+  }
+
+  .u-footer .u-line-1 {
+    margin-top: 60px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-footer .u-layout-cell-1 {
+    min-height: 409px;
   }
 }
 @media (max-width: 767px) {
   .u-footer .u-sheet-1 {
-    min-height: auto;
+    min-height: 1478px;
+  }
+
+  .u-footer .u-social-icons-1 {
+    margin-top: 60px;
+    margin-right: auto;
+    margin-left: 20px;
+  }
+
+  .u-footer .u-line-1 {
+    margin-top: -75px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-footer .u-layout-cell-1 {
-    min-height: 202px;
+    min-height: 614px;
   }
 
   .u-footer .u-container-layout-1 {
@@ -35607,11 +35659,6 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-footer .u-layout-cell-2 {
     min-height: auto;
-  }
-
-  .u-footer .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
   }
 
   .u-footer .u-layout-cell-3 {
@@ -35632,7 +35679,42 @@ a.u-link.u-text-hover-grey-90:hover {
     padding-right: 10px;
   }
 }
+@media (max-width: 575px) {
+  .u-footer .u-sheet-1 {
+    min-height: 1294px;
+  }
 
+  .u-footer .u-social-icons-1 {
+    margin-top: 136px;
+  }
+
+  .u-footer .u-line-1 {
+    margin-top: -151px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-footer .u-layout-cell-1 {
+    min-height: 276px;
+  }
+
+  .u-footer .u-layout-cell-2 {
+    min-height: 262px;
+  }
+
+  .u-footer .u-layout-cell-3 {
+    min-height: 330px;
+  }
+
+  .u-footer .u-position-2 {
+    margin-right: 147px;
+  }
+
+  .u-footer .u-layout-cell-4 {
+    min-height: 264px;
+  }
+}
 
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
